set solr.hosturl in config.properties

--- a/stanford-sw/sw_config.properties
+++ b/stanford-sw/sw_config.properties
@@ -54,16 +54,15 @@ stanford.combining.reader = true
 #   this file is read AFTER build.properties in ant build.xml 
 
 # - solr.path - path to your Solr instance
-solr.path = ${solr.path}
+#solr.path = ${solr.path}
 
 # - solr.data.dir - path to data directory for your Solr instance 
 #   (note: Solr can be configured to use a different data directory)
 #solr.data.dir = /home/blacklight/data/solr/dataBuild
-solr.data.dir = ${solr.path}/data
+#solr.data.dir = ${solr.path}/data
 
 # - solr.hosturl - optional URL of running solr search engine for notifying Solr
 # search engine to reload its index files.
-#solr.hosturl = ${solr.hosturl}
 solr.hosturl = http://localhost:8983/solr
 
 # - solr.optimize_at_end - whether or not to optimize solr index after adding
