MarcHandler.makePropertySearchPath() now includes the parent directory of any jar files in the result -- this is not perfect as it should really be looking inside the jars in dist, not in the dist directory; also changed a property name and adjusted sw_config.properties

--- a/stanford-sw/sw_config.properties
+++ b/stanford-sw/sw_config.properties
@@ -10,14 +10,9 @@
 # this is not provided, SolrMarc can only work by communicating with a running Solr server.
 solrmarc.solr.war.path=${site.solr.war.path}
 
-# solrmarc.custom.jar.path - Jar containing custom java code to use in indexing. 
-# If solr.indexer below is defined (other than the default of org.solrmarc.index.SolrIndexer)
-# you MUST define this value to be the Jar containing the class listed there. 
-solrmarc.custom.jar.path=StanfordIndexer.jar
-
-# - solr.indexer.properties -indicates how to populate Solr index fields from
+# - solrmarc.index.properties -indicates how to populate Solr index fields from
 #   marc data.  This is the core configuration file for solrmarc.
-solr.indexer.properties = sw_index.properties
+solrmarc.index.properties = sw_index.properties
 
 # - solr.indexer - full name of java class with custom indexing functions. This 
 #   class must extend SolrIndexer; Defaults to SolrIndexer.
@@ -42,21 +37,20 @@ marc.verbose = false
 #  create a single marc record with ALL the 999 fields for importing into Solr.
 marc.combine_records = 999
 
+# FIXME:  this should be a straight classname, not this indirect switch
 # - use org.solrmarc.marc.CombineMultBibsMhldsReader as the combining 
 #  reader wrapper for split marc records followed by mhld records
 #  e.g. :    bib1 bib2 mhld2 mhld2 bib3 bib4 bib4 mhld4 mhld4 bib5 ...
-# NOTE:  setting this to true causes a huge number of tests to fail as the
-#  test record files are not sorted in id order 
 stanford.combining.reader = true
 
 
 # --- Solr instance properties -------------------------------------------------
 #   this file is read AFTER build.properties in ant build.xml 
 
-# - solr.path - path to your Solr instance
+# - solr.path - path to your Solr instance for embedded loading
 #solr.path = ${solr.path}
 
-# - solr.data.dir - path to data directory for your Solr instance 
+# - solr.data.dir - path to data directory for your Solr instance for embedded loading
 #   (note: Solr can be configured to use a different data directory)
 #solr.data.dir = /home/blacklight/data/solr/dataBuild
 #solr.data.dir = ${solr.path}/data
