--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 
 
 <!-- ************ CORE non-test targets ********** -->
-	
+
 	<target name="clean_core" description="remove the build directories for CORE">
 		<delete dir="${core.build.dir}" />
 	</target>
@@ -27,12 +27,12 @@
 			<include name="*.jar" />
 		</fileset>
 	</path>
-	
+
 	<target name="compile_core" depends="init_core" description="Compile CORE source code into the build directory">
-		<javac destdir="${core.build.dir}" srcdir="${core.src.dir}" 
-                target="${java.compat.version}" 
-                source="${java.compat.version}" 
-                debug="true" debuglevel="lines,vars,source" 
+		<javac destdir="${core.build.dir}" srcdir="${core.src.dir}"
+                target="${java.compat.version}"
+                source="${java.compat.version}"
+                debug="true" debuglevel="lines,vars,source"
                 encoding="utf-8" includeAntRuntime="false">
 			<include name="**/*.java" />
 			<classpath refid="core.classpath" />
@@ -47,9 +47,9 @@
 		</jar>
 	</target>
 
-	
+
 <!-- ************ CORE TEST targets ********** -->
-	
+
 	<target name="test_clean_core" description="remove the directories generated for CORE testing">
 		<delete dir="${core.test.build.dir}" />
 		<delete dir="${test.solr.data.dir}" />
@@ -71,12 +71,12 @@
 		<pathelement location="${core.build.dir}"/>
 		<path refid="core.classpath" />
 	</path>
-	
+
 	<target name="test_compile_core" depends="compile_core,test_init_core" description="Compile CORE TEST source code into the test build directory">
-		<javac destdir="${core.test.build.dir}" srcdir="${core.test.src.dir}" 
-                target="${java.compat.version}" 
-                source="${java.compat.version}" 
-                debug="true" debuglevel="lines,vars,source" 
+		<javac destdir="${core.test.build.dir}" srcdir="${core.test.src.dir}"
+                target="${java.compat.version}"
+                source="${java.compat.version}"
+                debug="true" debuglevel="lines,vars,source"
                 encoding="utf-8" includeAntRuntime="false">
 			<include name="**/*.java" />
 			<classpath refid="test.core.build.classpath" />
@@ -90,7 +90,7 @@
 		</fileset>
 		<path refid="test.core.build.classpath" />
 	</path>
-	
+
 	<target name="core_setup_test_jetty">
 		<echo message="solr path for CORE testing: ${test.solr.run.dir}" />
 		<!-- set up jetty with solr files, including war, configuration, jars ... -->
@@ -131,10 +131,10 @@
 -->
 		</junit>
 	</target>
-	
-	
+
+
 <!-- ************ CORE continuous integration targets ********** -->
-		
+
 	<path id="cobertura.classpath">
 		<fileset dir="${cobertura.jar.dir}">
 			<include name="cobertura.jar" />
@@ -159,7 +159,7 @@
 			</fileset>
 		</cobertura-instrument>
 	</target>
-	
+
 	<target name="test_core_coverage" depends="test_clean_core,test_compile_core,instrument_core,core_setup_test_jetty"
 		description="run tests for CORE and capture code coverage" >
 		<delete dir="${core.coverage.dir}" />
@@ -198,8 +198,8 @@
 		<cobertura-report format="xml" destdir="${core.coverage.dir}" srcdir="${core.src.dir}" datafile="${cobertura.core.data.file}"/>
 		<cobertura-report format="html" destdir="${core.coverage.dir}" srcdir="$core.src.dir}" datafile="${cobertura.core.data.file}"/>
 	</target>
-	
-	
+
+
 	<target name="javadoc_core" description="generate javadoc for CORE code">
 		<path id="core.docs.srcpath">
 			<pathelement location="${core.src.dir}"/>
@@ -231,16 +231,16 @@
 	<target name="clean_core_all" depends="test_clean_core,clean_core" />
 
 	<target name="ci_core" depends="clean_core_all,test_core_coverage,javadoc_core" description="CORE Continuous Integration: javadoc and tests with coverage" />
-	
+
 
 
 <!-- ************ SITE basic build targets ********** -->
-	
+
 	<target name="clean_site" description="remove the build directories for SITE">
 		<delete dir="${site.build.dir}" />
 		<delete dir="${site.dist.dir}" />
 	</target>
-		
+
 	<target name="init_site" depends="init_core" description="create (empty) generated directories for site AND core code">
 		<mkdir dir="${site.build.dir}" />
 	</target>
@@ -252,24 +252,24 @@
 		<pathelement location="${core.build.dir}"/>
 		<path refid="core.classpath" />
 	</path>
-	
+
 	<target name="compile_site" depends="compile_core,init_site" description="Compile SITE AND CORE source code into the build directory">
-		<javac destdir="${site.build.dir}" srcdir="${site.src.dir}" 
-                target="${java.compat.version}" 
-                source="${java.compat.version}" 
-                debug="true" debuglevel="lines,vars,source" 
+		<javac destdir="${site.build.dir}" srcdir="${site.src.dir}"
+                target="${java.compat.version}"
+                source="${java.compat.version}"
+                debug="true" debuglevel="lines,vars,source"
                 encoding="utf-8" includeAntRuntime="false">
 			<include name="**/*.java" />
 			<classpath refid="site.classpath" />
 		</javac>
 	</target>
 
-<!--	
+<!--
 	<target name="jar_site" depends="jar_core,compile_site" description="Build custom jar file containing SITE code" >
 		<jar destfile="${site.build.dir}/${site.jar.name}.jar">
--->		
+-->
 			<!-- SITE classes, etc. -->
-<!--	
+<!--
 			<fileset dir="${site.build.dir}" includes="**/*.class" excludes="test/**"/>
 			<fileset file="${site.log4j.props}" />
 			<fileset dir="${site.basedir}" includes="*.properties,${trans.map.dir}/**" />
@@ -281,18 +281,18 @@
 		</jar>
 	</target>
 -->
-	
+
 	<target name="dist_site" depends="clean,jar_core,compile_site"
              description="Copy necessary files to the SITE dist directory to make a runnable instance of SITE SolrMarc">
-		
+
 		<!-- copy jars of SolrMarc code to SITE (dist) directory -->
 		<mkdir dir="${site.dist.dir}" />
 		<copy todir="${site.dist.dir}">
 			<fileset file="${core.build.dir}/${core.jar.name}.jar" />
 		</copy>
 
-		
-<!-- FIXME:  should be able to have config props and trans maps in jar, no? -->		
+
+<!-- FIXME:  should be able to have config props and trans maps in jar, no? -->
 		<!-- copy .properties and translation maps to SITE (dist) directory -->
 		<copy todir="${site.dist.dir}">
 			<fileset dir="${site.basedir}" includes="*.properties" />
@@ -303,7 +303,7 @@
 			<fileset dir="${site.basedir}/${trans.map.dir}" includes="*.properties" />
 			<fileset dir="${core.basedir}/${trans.map.dir}" includes="*.properties" />
 		</copy>
-		
+
 		<!-- copy jars used by SolrMarc to SITE (dist)/lib directory -->
 		<mkdir dir="${site.dist.dir}/lib" />
 		<copy todir="${site.dist.dir}/lib" flatten="yes">
@@ -325,12 +325,12 @@
 			<fileset dir="${core.scripts.dir}" includes="**" />
 		</copy>
 		<chmod dir="${site.dist.script.dir}/${core.basedir}" perm="755" includes="*"/>
-	
-<!-- FIXME:  there's probably a more elegant way to get the manifest classpath, but I couldn't figure it out -->		
-		
+
+<!-- FIXME:  there's probably a more elegant way to get the manifest classpath, but I couldn't figure it out -->
+
 		<!-- flesh out the manifest Class-Path in the SITE jar with jars in dist -->
 		<property name="canonical.path" location="${site.dist.dir}" /> <!-- ensures path is "canonical" -->
-		
+
 		<fileset id="dist.top.level.jars" dir="${canonical.path}" includes="*.jar"/>
 		<fileset id="dist.lib.jars" dir="${canonical.path}/lib" includes="*.jar"/>
 
@@ -338,7 +338,7 @@
 		   <fileset refid="dist.top.level.jars"/>
 		   <fileset refid="dist.lib.jars"/>
 		</path>
-		
+
 		<!-- convert lib folder to string property for use in manifest classpath-->
 		<pathconvert property="manifest.classpath" pathsep=" ">
 			<path refid="dist.jar.classpath" />
@@ -346,13 +346,13 @@
 		</pathconvert>
 
 <!-- FIXME:  there should be a way to just update the manifest classpath for the existing jar, but I'm having trouble -->
-<!--		
+<!--
 		<jar update="true" destfile="${site.build.dir}/${site.jar.name}.jar" filesetmanifest="merge">
 			<manifest>
 				<attribute name="Class-Path" value="${manifest.classpath}"/>
 			</manifest>
 		</jar>
--->		
+-->
 
 		<!-- create jar with jars from dist classpath in manifest -->
 		<jar destfile="${site.dist.dir}/${site.jar.name}.jar">
@@ -366,17 +366,18 @@
 				<attribute name="Main-Class" value="org.solrmarc.marc.MarcImporter"/>
 			</manifest>
 		</jar>
-		
+
 		<echo message="" />
 		<echo message="*** ALERT *** ALERT *** ALERT *** ALERT *** ALERT *** ALERT ***" />
 		<echo message="!!! Make sure the Solr instance used for indexing has correct conf, lib, etc. files before running code out of dist. !!!" />
+		<echo message="!!! Make sure the Solr instance used for indexing has desired (or empty) index before running code out of dist. !!!" />
 		<echo message="*** ALERT *** ALERT *** ALERT *** ALERT *** ALERT *** ALERT ***" />
 
 	</target>
-	
-	
+
+
 <!-- ************ SITE TEST targets ********** -->
-	
+
 	<target name="test_clean_site" description="remove the directories generated for SITE testing">
 		<delete dir="$site.test.build.dir}" />
 		<delete dir="${site.test.solr.data.dir}" />
@@ -386,7 +387,7 @@
 		<delete file="${cobertura.site.data.file}" />
 		<delete dir="${site.coverage.dir}" />
 	</target>
-	
+
 	<target name="test_init_site" depends="test_init_core" description="create (empty) generated directories for SITE and CORE TEST code">
 		<mkdir dir="${site.test.build.dir}" />
 	</target>
@@ -403,22 +404,22 @@
 	<target name="test_compile_site" depends="test_compile_core,compile_site,test_init_site" description="Compile SITE and CORE TEST source code into the test build directory">
 <!-- FIXME: it makes NO SENSE that this mkdir is needed -->
 		<mkdir dir="${site.test.solr.run.dir}/lib" />
-		<javac destdir="${site.test.build.dir}" srcdir="${site.test.src.dir}" 
-                target="${java.compat.version}" 
-                source="${java.compat.version}" 
-                debug="true" debuglevel="lines,vars,source" 
+		<javac destdir="${site.test.build.dir}" srcdir="${site.test.src.dir}"
+                target="${java.compat.version}"
+                source="${java.compat.version}"
+                debug="true" debuglevel="lines,vars,source"
                 encoding="utf-8" includeAntRuntime="false">
 			<include name="**/*.java" />
 			<classpath refid="test.site.build.classpath" />
 		</javac>
 	</target>
-	
+
 	<path id="test.site.run.classpath" description="classes and jars needed to run SITE TEST code">
 		<pathelement location="${site.test.build.dir}"/>
 		<path refid="test.site.build.classpath" />
 		<path refid="test.core.run.classpath" />
 	</path>
-	
+
 	<target name="site_setup_test_jetty">
 		<echo message="solr path for SITE testing: ${test.solr.run.dir}" />
 		<!-- set up jetty with solr files, including war, configuration, jars ... -->
@@ -434,7 +435,7 @@
 		<!-- copy over the war file -->
 		<copy file="${site.solr.war.path}" tofile="${test.jetty.dir}/webapps/solr.war" failonerror="false" />
 	</target>
-	
+
 	<target name="test_site" depends="clean_test,test_compile_site,site_setup_test_jetty" description="run tests for SITE code">
     <junit showoutput="yes" printsummary="yes" fork="yes" forkmode="perBatch" haltonfailure="on">
 			<classpath refid="test.site.run.classpath" />
@@ -450,14 +451,14 @@
 			<sysproperty key="test.jetty.dir" value="${site.test.jetty.dir}" />
     	<sysproperty key="test.solr.url" value="${site.test.solr.url}" />
 			<sysproperty key="test.solr.path" value="${site.test.solr.run.dir}" />
-    	
+
 			<test name="${site.test.class}" />
 		</junit>
 	</target>
 
-	
+
 <!-- ************ SITE continuous integration targets ********** -->
-		
+
 	<!-- NOTE:  this should be used only after a fresh SITE compile -->
 	<target name="instrument_site">
 		<delete dir="${site.instr.dir}" />
@@ -470,12 +471,12 @@
 			</fileset>
 		</cobertura-instrument>
 	</target>
-	
+
 	<target name="test_site_coverage" depends="clean_test,test_compile_site,instrument_site,site_setup_test_jetty"
 		description="run tests for SITE and capture code coverage" >
 		<delete dir="${site.coverage.dir}" />
 		<mkdir dir="${site.coverage.dir}"/>
-		
+
 		<path id="instrumented.classpath">
 			<pathelement location="${site.instr.dir}" />
 			<path refid="test.site.run.classpath" />
@@ -500,7 +501,7 @@
 			<sysproperty key="test.jetty.dir" value="${site.test.jetty.dir}" />
     	<sysproperty key="test.solr.url" value="${site.test.solr.url}" />
 			<sysproperty key="test.solr.path" value="${site.test.solr.run.dir}" />
-    	
+
 			<test name="${site.coverage.test.class}" />
 		</junit>
 
@@ -508,8 +509,8 @@
 		<cobertura-report format="xml" destdir="${site.coverage.dir}" srcdir="${site.src.dir}" datafile="${cobertura.site.data.file}"/>
 		<cobertura-report format="html" destdir="${site.coverage.dir}" srcdir="${site.src.dir}" datafile="${cobertura.site.data.file}"/>
 	</target>
-	
-	
+
+
 	<target name="javadoc_site" description="generate javadoc for SITE code">
 		<path id="site.docs.srcpath">
 			<pathelement location="${site.src.dir}"/>
@@ -532,18 +533,18 @@
 				<link href="http://lucene.apache.org/solr/api" />
 		</javadoc>
 	</target>
-	
+
 	<target name="ci_site" depends="clean_all,test_site_coverage,javadoc_site" description="SITE Continuous Integration: javadoc and tests with coverage" />
-	
-	
+
+
 <!-- ************ CORE and SITE together targets ********** -->
-	
+
 	<target name="clean" depends="clean_site,clean_core" description="remove the build directories for CORE and SITE" />
 
 	<target name="clean_test" depends="test_clean_site,test_clean_core" description="remove the directories generated for CORE and SITE testing" />
-	
+
 	<target name="clean_all" depends="clean_test, clean" description="remove all generated directories for CORE and SITE, including test and dist">
 		<delete dir="${site.dist.dir}" quiet="true" />
 	</target>
-	
+
 </project>
