--- a/examples/stanford/sw_index.properties
+++ b/examples/stanford/sw_index.properties
@@ -1,6 +1,6 @@
 # Stanford mappings of solr field contents from marc bib data
 id = custom, getId
-marc21 = FullRecordAsMARC
+marcxml = FullRecordAsXML
 all_search = custom, getAllFields
 collection = "sirsi"
 display_type = "sirsi"
