update examples/stanford/build.properties for hudson (again)

--- a/examples/stanford/build.properties
+++ b/examples/stanford/build.properties
@@ -7,20 +7,20 @@ default.config = sw_config.properties
 #- solrmarc.solr.war.path - location of solr.war containing solr jar libraries 
 #                           or directory that contains those solr jar libraries 
 #  sw-solr-xxx
-solrmarc.solr.war.path = /home/blacklight/solr-war/solr.war
+#solrmarc.solr.war.path = /home/blacklight/solr-war/solr.war
 #  laptop
 #solrmarc.solr.war.path = /Users/ndushay/NGDE/solr/jetty-solr1.5/webapps/solr.war
 #  testing (Hudson)
-#solrmarc.solr.war.path = ../test/solr/war/solr1.5trunk2010-03-08.war
+solrmarc.solr.war.path = ../test/solr/war/solr1.5trunk2010-03-08.war
 
 # - solr.path - used when building your site's solrmarc, if you're using Solr
 #   code that's not included with Solrmarc project code
 #  sw-solr-master
-solr.path=/home/blacklight/solr-home
+#solr.path=/home/blacklight/solr-home
 #  laptop
 #solr.path = /Users/ndushay/NGDE/solr/jetty-solr1.5/solr
 #  testing (Hudson)
-#solr.path = ../test/solr
+solr.path = ../test/solr
 
 # - solr.hosturl - set in sw_config.properties - not needed here
 #- solr.hosturl - URL of where the solr server is running
