another comment re: property confusion in build.properties

--- a/build.properties
+++ b/build.properties
@@ -23,7 +23,9 @@ solrj.lib.dir = ${lib.dir}/solrj-lib
 # FIXME: redundant/implied to use remote solr
 use.remote.solr = true
 # FIXME: the solr.url should be dealt with as a core or site property, along with other remote props
+# FIXME: how does this relate to site.solr.url below?
 solr.url = http://localhost:8983/solr
+
 # FIXME: can we get rid of verbose and just use log levels?  Or is it used for remote?
 solr.verbose = true
 
