more info for marc.source documentation

--- a/docs/xx_config.properties
+++ b/docs/xx_config.properties
@@ -77,7 +77,7 @@ solrmarc.use_streaming_proxy = true;
 # Settings to control how the records are handled as they are read in.
 
 # - marc.source - marc source type - how should marc data be slurped
-#   values are:  FILE or Z3950 or DIR
+#   values are:  FILE or DIR (?) or NONE (?) or STDIN (?)  assumed STDIN if not set
 marc.source = FILE
 
 # - marc.path - the path to the marc data file or directory containing marc files
