a bit more documentation on the config.properties possbilities

--- a/docs/xx_config.properties
+++ b/docs/xx_config.properties
@@ -162,5 +162,6 @@ solr.fieldname = marc_display
 solr.query = id:blah
 
 
-#
+# if a marcxml string doesn't parse cleanly, if this is set to false, then
+#  the bad record is intended to be output (to badRecs.xml)
 solr.do_update
