use binaryrequest handler - should speed things up

--- a/examples/stanford/sw_config.properties
+++ b/examples/stanford/sw_config.properties
@@ -48,6 +48,7 @@ marc.combine_records = 999
 #  test record files are not sorted in id order 
 stanford.combining.reader = true
 
+solrmarc.use_binary_request_handler = true
 
 # --- Solr instance properties -------------------------------------------------
 #   this file is read AFTER build.properties in ant build.xml 
