favor site translation maps in dist over core translation maps -- copy over the core ones.

--- a/build.xml
+++ b/build.xml
@@ -299,9 +299,11 @@
 			<fileset file="${site.log4j.props}" />
 		</copy>
 		<mkdir dir="${site.dist.dir}/${trans.map.dir}" />
-		<copy todir="${site.dist.dir}/${trans.map.dir}">
-			<fileset dir="${site.basedir}/${trans.map.dir}" includes="*.properties" />
+		<copy todir="${site.dist.dir}/${trans.map.dir}" >
 			<fileset dir="${core.basedir}/${trans.map.dir}" includes="*.properties" />
+		</copy>
+		<copy todir="${site.dist.dir}/${trans.map.dir}" overwrite="true" >
+			<fileset dir="${site.basedir}/${trans.map.dir}" includes="*.properties" />
 		</copy>
 
 		<!-- copy jars used by SolrMarc to SITE (dist)/lib directory -->
