--- a/stanford-sw/sw_config.properties
+++ b/stanford-sw/sw_config.properties
@@ -66,8 +66,8 @@ solr.optimize_at_end = false
 
 # set to true to use SolrJ StreamingUpdateSolrServer for remote Solr Server
 solrmarc.use_streaming_proxy = true;
-
-solrmarc.use_binary_request_handler
+solrmarc.use_solr_server_proxy = true;
+solrmarc.use_binary_request_handler = true;
 
 # -- MARC data properties ------------------------------------------------------
 
