don't use streaming proxy as updates silently fail w unknown number of unindexed records

--- a/stanford-sw/sw_config.properties
+++ b/stanford-sw/sw_config.properties
@@ -65,7 +65,8 @@ solr.hosturl = http://localhost:8983/solr
 solr.optimize_at_end = false
 
 # set to true to use SolrJ StreamingUpdateSolrServer for remote Solr Server
-solrmarc.use_streaming_proxy = true
+#  2012-08 streaming updates silently fail w unknown number of unindexed records
+solrmarc.use_streaming_proxy = false
 solrmarc.use_binary_request_handler = true
 
 # -- MARC data properties ------------------------------------------------------
