changes for biz to come into Symphony

--- a/stanford-sw/translation_maps/location_map.properties
+++ b/stanford-sw/translation_maps/location_map.properties
@@ -23,7 +23,7 @@ ART-RESV = On Reserve at ART Library
 ART-AT-ENG = Currently available at Engineering Library
 ARTVAULT = Art Vault
 ASK@EASIA = Check East Asia Library for holdings
-ASK@GSB =  Check Business Library catalog for status
+#ASK@GSB =  Check Business Library catalog for status
 ASK@LANE =  Check Lane catalog for status
 ASSMD-LOST = Assumed lost
 ATLASES = Atlas Section
@@ -47,6 +47,15 @@ BIO-RESV = On Reserve at FALCONER Library
 BOX-COLL = Box Collection
 BRAN-RESV = On Reserve at BRANNER Library
 BRIT-DOCS = British Government Documents
+BUS-ARCH = Archives
+BUS-LOAN = i-Desk
+BUS-CMC = Career Corner
+BUS-COMPF = Computer Files (Ask at i-Desk)
+BUSDISPLAY = Display Shelves
+BUS-PER = Periodicals
+BUS-POP = Popular Business Books
+BUS-LOCKED = Locked Stacks (Ask at i-Desk)
+BUS-RESV = On Reserve at BUSINESS Library
 CALIF-DOCS = California State Documents
 CCRMA = Center for Computer Research in Music and Acoustics
 CDL-2NDFL = Curriculum Development Lab
@@ -75,7 +84,7 @@ CURRENTPER = Current Periodicals
 CURRICULUM = Curriculum Collection
 CURRSTOR = Ask at loan desk
 #DISCARD = Discard (!skip 999)
-#DISCARD-NS = Discarded - shadow (!skip 999) 
+#DISCARD-NS = Discarded - shadow (!skip 999)
 DOMESTIC = Domestic
 EALSAL-CHN = Chinese materials in SAL 1&2
 EALSAL-JPN = Japanese materials in SAL 1&2
@@ -244,6 +253,7 @@ OVERSIZED = Oversized
 PAGE-AR = Use restricted to Art Library
 PAGE-AS = Use restricted to Archive of Recorded Sound
 PAGE-BI = Use restricted to Falconer (Biology)
+PAGE-BU = Use restricted to Business Library
 PAGE-CH = Use restricted to Swain (Chemistry)
 PAGE-CL = Use restricted to Classics Library
 PAGE-EA = Use restricted to East Asia Library
@@ -255,7 +265,8 @@ PAGE-HA = Use restricted to Hoover Archives
 PAGE-HP = Use restricted to Hopkins (Marine Biology)
 PAGE-HV = Use restricted to Hoover Library
 PAGE-ILL = Paged to Interlibrary Loan Department
-PAGE-JA = Use restricted to Business Library
+PAGE-IRON = Use restricted to Business Library
+#PAGE-JA = Use restricted to Business Library
 PAGE-LN = Paged to Lane (Medical)
 PAGE-LP = Paging restricted to Music or Green Media-Microtext
 PAGE-LW = Use restricted to Crown (Law)
@@ -287,6 +298,7 @@ READY-REF = Ready Reference Shelf
 RECORDINGS = Recordings
 REF-CHN = Reference (Chinese) (Non-ciculating)
 REF-DESK = Reference Desk (Non-ciculating)
+REFERNCE = Reference (Non-circulating)
 REFERENCE = Reference (Non-circulating)
 REF-JPN = Reference (Japanese) (Non-ciculating)
 REF-KOR = Reference (Korean) (Non-ciculating)
