--- a/stanford-sw/translation_maps/locations_shelby_list.properties
+++ b/stanford-sw/translation_maps/locations_shelby_list.properties
@@ -1,6 +1,8 @@
 # Locations indicating items are not shelved by call number
 #  should be home locations
 
+BUS-PER
+BUSDISPLAY
 SHELBYTITL
 SHELBYSER
 STORBYTITL
