library facet name changes per JVine

--- a/stanford-sw/translation_maps/library_map.properties
+++ b/stanford-sw/translation_maps/library_map.properties
@@ -3,35 +3,35 @@
 #APPLIEDPHY = Applied Physics Department
 ARS = Archive of Recorded Sound
 ART = Art & Architecture
-BIOLOGY = Falconer (Biology)
+BIOLOGY = Biology (Falconer)
 BUSINESS = Business
-CHEMCHMENG = Swain (Chemistry & Chem. Engineering)
+CHEMCHMENG = Chemistry & ChemEng (Swain)
 CLASSICS = Classics
 #CPM = Obsolete
-EARTH-SCI = Branner (Earth Sciences & Maps)
+EARTH-SCI = Earth Sciences (Branner)
 EAST-ASIA = East Asia
-EDUCATION = Cubberley (Education)
-ENG = Engineering
-GOV-DOCS = Jonsson (Government Documents)
-GREEN = Green (Humanities & Social Sciences)
+EDUCATION = Education (Cubberley)
+ENG = Engineering (Terman)
+GOV-DOCS = Green
+GREEN = Green
 #GRN-REF = Obsolete
-HOOVER = Hoover Library
-HOPKINS = Miller (Hopkins Marine Station)
+HOOVER = Hoover
+HOPKINS = Marine Biology (Miller)
 HV-ARCHIVE = Hoover Archives
 #ILB = Ignore
-LANE-MED = Lane (Medical)
-LAW = Crown (Law)
+LANE-MED = Medical (Lane)
+LAW = Law (Crown)
 # Jackson will be removed sometime soon (Oct 2012?)
 JACKSON = Business
-MATH-CS = Mathematics & Statistics
+MATH-CS = Math & Statistics
 MEYER = Meyer
 MUSIC = Music
 PHYSICS = Physics
-SAL = Stanford Auxiliary Library (On-campus)
-SAL3 = SAL3 (Off-campus)
-SAL-NEWARK = SAL Newark (Off-campus)
-SPEC-COLL = Special Collections & Archives
+SAL = SAL1&2 (on-campus shelving)
+SAL3 = SAL3 (off-campus storage)
+SAL-NEWARK = SAL Newark (off-campus storage)
+SPEC-COLL = Special Collections
 #SPEC-DESK = (In-transit location for SAL paged items)
-TANNER = Tanner (Philosophy Dept.)
+TANNER = Philosophy (Tanner)
 
 #SUL = Stanford University Libraries
