revert to previous library names

--- a/stanford-sw/translation_maps/library_map.properties
+++ b/stanford-sw/translation_maps/library_map.properties
@@ -3,35 +3,35 @@
 #APPLIEDPHY = Applied Physics Department
 ARS = Archive of Recorded Sound
 ART = Art & Architecture
-BIOLOGY = Biology (Falconer)
+BIOLOGY = Falconer (Biology)
 BUSINESS = Business
-CHEMCHMENG = Chemistry & ChemEng (Swain)
+CHEMCHMENG = Swain (Chemistry & Chem. Engineering)
 CLASSICS = Classics
 #CPM = Obsolete
-EARTH-SCI = Earth Sciences (Branner)
+EARTH-SCI = Branner (Earth Sciences & Maps)
 EAST-ASIA = East Asia
-EDUCATION = Education (Cubberley)
-ENG = Engineering (Terman)
-GOV-DOCS = Green
-GREEN = Green
+EDUCATION = Cubberley (Education)
+ENG = Engineering
+GOV-DOCS = Jonsson (Government Documents)
+GREEN = Green (Humanities & Social Sciences)
 #GRN-REF = Obsolete
-HOOVER = Hoover
-HOPKINS = Marine Biology (Miller)
+HOOVER = Hoover Library
+HOPKINS = Miller (Hopkins Marine Station)
 HV-ARCHIVE = Hoover Archives
 #ILB = Ignore
-LANE-MED = Medical (Lane)
-LAW = Law (Crown)
+LANE-MED = Lane (Medical)
+LAW = Crown (Law)
 # Jackson will be removed sometime soon (Oct 2012?)
 JACKSON = Business
-MATH-CS = Math & Statistics
+MATH-CS = Mathematics & Statistics
 MEYER = Meyer
 MUSIC = Music
 PHYSICS = Physics
-SAL = SAL1&2 (on-campus shelving)
-SAL3 = SAL3 (off-campus storage)
-SAL-NEWARK = SAL Newark (off-campus storage)
-SPEC-COLL = Special Collections
+SAL = Stanford Auxiliary Library (On-campus)
+SAL3 = SAL3 (Off-campus)
+SAL-NEWARK = SAL Newark (Off-campus)
+SPEC-COLL = Special Collections & Archives
 #SPEC-DESK = (In-transit location for SAL paged items)
-TANNER = Philosophy (Tanner)
+TANNER = Tanner (Philosophy Dept.)
 
 #SUL = Stanford University Libraries
