solr 4.3.0 changes - not tested

--- a/build.properties
+++ b/build.properties
@@ -87,7 +87,7 @@ core.test.class = org.solrmarc.AllTests
 #core.test.class = org.solrmarc.tools.MergeSummaryHoldingsTests
 
 core.test.solr.orig.dir = ${test.dir}/solr
-core.solr.war.path = ${core.test.solr.orig.dir}/war/apache-solr-3.6.1-cjkbigram-patch4286.war
+core.solr.war.path = ${core.test.solr.orig.dir}/war/solr-4.3.0.war
 
 # -- CORE Continuous Integration Properties
 core.instr.dir = ${instr.dir}/${core.basedir}
@@ -120,7 +120,7 @@ site.use_solr_server_proxy = true
 site.use_binary_request_handler = true
 site.use_streaming_proxy = false
 site.solr.orig.dir = ${site.basedir}/solr
-site.solr.war.path = ${site.solr.orig.dir}/apache-solr-3.6.1-cjkbigram-patch4286.war
+site.solr.war.path = ${site.solr.orig.dir}/solr-4.3.0.war
 
 site.jar.name = StanfordSearchWorksSolrMarc
 
