have jetty8 use log4j for solr 4.3.0

--- a/build.properties
+++ b/build.properties
@@ -9,7 +9,8 @@ build.dir = build
 
 # FIXME:  use these properties
 # java.util.logging level settings for solr logging:  OFF, SEVERE, WARNING, INFO, FINE, FINER, FINEST, ALL
-solr.log.level = SEVERE
+# log4j logging level settings for solr logging:  OFF, FATAL, WARN, INFO, DEBUG, ALL
+solr.log.level = WARN
 # log4j logging level settings for solrmarc logging:  OFF, FATAL, WARN, INFO, DEBUG, ALL
 solrmarc.log.level = WARN
 
