--- a/stanford-sw/log4j.properties
+++ b/stanford-sw/log4j.properties
@@ -2,7 +2,7 @@
 #
 # $Id: log4j.properties 1095 2010-01-22 17:22:43Z rh9ec@virginia.edu $
 
-log4j.rootLogger=warn, stdout, file
+log4j.rootLogger=WARN, stdout, file
 
 # Application logging level
 # 	Valid options are TRACE,DEBUG,INFO,WARN,ERROR,FATAL
