--- a/core/test/log4j.properties
+++ b/core/test/log4j.properties
@@ -2,14 +2,14 @@
 #
 # $Id: log4j.properties 1095 2010-01-22 17:22:43Z rh9ec@virginia.edu $
 
-log4j.rootLogger=DEBUG, stdout, file
+log4j.rootLogger=WARN, stdout, file
 
 # Application logging level
 # 	Valid options are TRACE,DEBUG,INFO,WARN,ERROR,FATAL
 log4j.logger.org.solrmarc.marc.MarcPrinter=WARN
-log4j.logger.org.solrmarc.marc.MarcImporter=DEBUG
-log4j.logger.org.solrmarc.marc.MarcHandler=DEBUG
-log4j.logger.org.solrmarc.tools.Utils=DEBUG
+log4j.logger.org.solrmarc.marc.MarcImporter=WARN
+log4j.logger.org.solrmarc.marc.MarcHandler=WARN
+log4j.logger.org.solrmarc.tools.Utils=WARN
 
 # stdout appender
 # Output the file name and line number to the console
