default use_streaming_proxy to false in build.properties

--- a/build.properties
+++ b/build.properties
@@ -74,10 +74,10 @@ core.test.dir = ${core.basedir}/${test.dir}
 core.test.src.dir = ${core.test.dir}/src
 core.test.build.dir = ${core.build.dir}/${test.dir}
 
-# FIXME:  drop "use" and drop solr_server_proxy
+# FIXME:  drop "use"
 core.test.use_solr_server_proxy = true
 core.test.use_binary_request_handler = true
-core.test.use_streaming_proxy = true
+core.test.use_streaming_proxy = false
 
 core.test.data.path = ${core.test.dir}/data
 core.test.config.file = ${core.test.dir}/test_core_config.properties
@@ -100,6 +100,7 @@ core.javadoc.dir = ${javadoc.dir}/${core.basedir}
 
 #-------- SITE properties ----------
 
+# only matters for embedded server
 #solr.is.multicore = false
 
 site.basedir = stanford-sw
@@ -114,11 +115,10 @@ site.scripts.dir = ${site.basedir}/scripts
 site.config.file.name = sw_config.properties
 site.config.file = ${site.basedir}/${site.config.file.name}
 
-# FIXME:  drop "use" and drop solr_server_proxy
-site.use_binary_request_handler = true
-site.use_streaming_proxy = true
-# FIXME: this should be redundant?
+# FIXME:  drop "use"
 site.use_solr_server_proxy = true
+site.use_binary_request_handler = true
+site.use_streaming_proxy = false
 site.solr.orig.dir = ${site.basedir}/solr
 site.solr.war.path = ${site.solr.orig.dir}/apache-solr-3.6.1-cjkbigram-patch4286.war
 
