don't use streaming proxy for core tests

--- a/core/test/test_core_config.properties
+++ b/core/test/test_core_config.properties
@@ -12,6 +12,10 @@ solrmarc.indexing.properties = test_core_index.properties
 # NOTE:  this is set via ant file and test code 
 #solr.hosturl = http://localhost:8987
 
+# set to true to use SolrJ StreamingUpdateSolrServer for remote Solr Server
+#  2012-08 streaming updates silently fail w unknown number of unindexed records
+solrmarc.use_streaming_proxy = false
+
 # Settings to control how the records are handled as they are read in.
 
 # - marc.to_utf_8 - if true, this will convert records in our import file from 
