added title_245a_exact_search and series_exact_search fields and anchored field types in order to boost very high when these fields exactly match the unstemmed terms in the query

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -37,6 +37,7 @@ title_sort = custom, getSortTitle
 # Series Search Fields
 series_search = 440anpv:490av:800[a-x]:810[a-x]:811[a-x]:830[a-x]
 vern_series_search = custom, getLinkedField(440anpv:490av:800[a-x]:810[a-x]:811[a-x]:830[a-x])
+series_exact_search = 830a
 
 # Author Title Search Fields
 author_title_search = custom, getAuthorTitleSearch
