begin implementing date explosion with ignored 008 dates

--- a/stanford-sw/sw_index.properties
+++ b/stanford-sw/sw_index.properties
@@ -90,10 +90,50 @@ era_facet = custom, removeTrailingPunct(650y:651y, [\\\\,;], ([A-Za-z0-9]{2}) )
 pub_search = custom, getPublication
 vern_pub_search = custom, getLinkedField(260ab:264ab)
 pub_country = 008[15-17]:008[15-16], country_map.properties, first
+
 pub_date = custom, getPubDate
-pub_date_i = custom, getPubDateSliderVals
 pub_date_group_facet = custom, getPubDateGroups
 pub_date_sort = custom, getPubDateSort
+#date_slider_year_tisim = custom, getPubDateSliderVals
+pub_date_i = custom, getPubDateSliderVals
+
+# Publication dates (31 flavors!  Baskin-Robbins)
+# from 008 date 1
+date_1_008_raw_ssim = 008[7-10]
+#beginning_year_tisim = custom, get008BeginningYear
+#earliest_year_tisim = custom, get008EarliestYear
+#earliest_poss_year_tisim = custom, get008EarliestPossibleYear
+#publication_year_tisim = custom, get008PublicationYear
+#release_year_tisim = custom, get008ReleaseYear
+#reprint_year_tisim = custom, get008ReprintYear
+# from 008 date 2
+date_2_008_raw_ssim = 008[11-14]
+#ending_year_tisim = custom, get008EndingYear
+#latest_year_tisim = custom, get008LatestYear
+#latest_poss_year_tisim = custom, get008LatestPossibleYear
+#production_year_tisim = custom, get008ProductionYear
+#orig_year_tisim = custom, get008OriginalYear
+#copyright_year_tisim = custom, get008CopyrightYear
+# from 260c
+#date_260c_raw_ssim = 260c
+#imprint_year_tisim = custom, getImprintYear
+# from 264c, based on indicators
+#date_264c_raw_ssim = 264c
+#prod_year_tisim = custom, getProductionYear
+#current_prod_year_tisim = custom, getCurrentProductionYear
+#former_prod_year_tisim = custom, getFormerProductionYear
+#pub_year_tisim = custom, getPublicationYear
+#current_pub_year_tisim = custom, getCurrentPublicationYear
+#former_pub_year_tisim = custom, getFormerPublicationYear
+#dist_year_tisim = custom, getDistributionYear
+#current_dist_year_tisim = custom, getCurrentDistributionYear
+#former_dist_year_tisim = custom, getFormerDistributionYear
+#manu_year_tisim = custom, getManufactureYear
+#current_manu_year_tisim = custom, getCurrentManufactureYear
+#former_manu_year_tisim = custom, getFormerManufactureYear
+#copy_year_tisim = custom, getCopyrightYear
+#current_copy_year_tisim = custom, getCurrentCopyrightYear
+#former_copy_year_tisim = custom, getFormerCopyrightYear
 
 language = custom, getLanguages, language_map.properties
 format = custom, getFormats
